# rules_sass

./: .gitignore  MODULE.bazel  README.md  WORKSPACE  pubspec.yaml
.dart_tool/: package_config.json
.github/workflows/: compiler.yml
src/: index.bzl
src/compiler/built/: BUILD.bazel
src/rules/: npm_sass_library.bzl  sass_binary.bzl  sass_library.bzl
src/shared/: collect_transitive.bzl  extensions.bzl  providers.bzl
src/toolchain/: download_sass.bzl  extensions.bzl  repositories.bzl  versions.bzl
test/: BUILD.bazel  a.scss  b.scss
test/mappings/material/: BUILD.bazel  index.scss
