"""Rules/toolchains for using sass with Bazel."""
module(name = "rules_sass")

sass = use_extension("@rules_sass//src/toolchain:extensions.bzl", "sass")
toolchains = sass.toolchain()
use_repo(sass, "linux_amd64_sass", "darwin_amd64_sass", "darwin_arm64_sass")

register_toolchains(
  "@linux_amd64_sass//:toolchain", 
  "@darwin_amd64_sass//:toolchain",
  "@darwin_arm64_sass//:toolchain",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")
bazel_dep(name = "aspect_rules_js", version = "2.4.2")

